fixed logo vertical alignment

--- a/src/style.css
+++ b/src/style.css
@@ -287,6 +287,7 @@
   margin-left: auto;
   margin-right: auto;
   justify-content: center;
+  align-items: center;
   text-decoration: none;
 
   @media (min-width: 992px) {
@@ -303,10 +304,5 @@
 
   &__title {
     max-width: 100%;
-    line-height: 70px;
-
-    @media (min-width: 992px) {
-      line-height: var(--ui-block-title-line-height);
-    }
   }
 }
